properly fix home entry on mobile/desktop

--- a/assets/sass/components/_navigation.scss
+++ b/assets/sass/components/_navigation.scss
@@ -38,11 +38,9 @@
 			}
 		}
 
-		.home-icon {
+		.home-icon { //this is the menu item
 			@screen lg {
-				::before {
-					@apply fa-solid fa-house #{!important};
-				}
+				@apply hidden;
 			}
 		}
 		
